Split PRs and commits
