# openapi.yaml
@@ -919,7 +919,6 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
-
   /workspaces/{workspaceId}/diffs/{filePath}:
     get:
       summary: Get diff for specific file
@@ -1246,6 +1245,40 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
+  /workspaces/{workspaceId}/commits:
+    get:
+      summary: List workspace commits
+      description: Retrieves the list of git commits in the workspace
+      operationId: listWorkspaceCommits
+      tags:
+        - Workspaces
+      parameters:
+        - $ref: '#/components/parameters/WorkspaceId'
+      responses:
+        '200':
+          description: List of commits
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  commits:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/Commit'
+        '404':
+          description: Workspace not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
   /workspaces/{workspaceId}/pfs:
     get:
       summary: List available PFS types
@@ -1494,7 +1527,6 @@ components:
         - description
         - state
         - draft
-        - commits
       properties:
         number:
           type: integer
@@ -1521,8 +1553,6 @@ components:
             - "merged": PR was merged into the main branch
         draft:
           $ref: '#/components/schemas/ProposalDraft'
-        commits:
-          $ref: '#/components/schemas/Commits'
 
     Commit:
       type: object
@@ -1530,27 +1560,20 @@ components:
         - sha
         - message
         - timestamp
+        - author
       properties:
         sha:
           type: string
           description: Commit SHA
-        url:
-          type: string
-          format: uri
-          description: URL to the commit on GitHub
-          default: null
         message:
           $ref: '#/components/schemas/CommitMessage'
         timestamp:
           type: string
           format: date-time
           description: Commit timestamp
-
-    Commits:
-      type: array
-      description: List of commits in the PR.
-      items:
-        $ref: '#/components/schemas/Commit'
+        author:
+          type: string
+          description: Name of the commit author
 
     Workspace:
       type: object
